# wealth-wise

backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27ba1c662aa3_.py  38a71426e481_userv2.py  e30562383dcd_userv1.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: users.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/models/: users.py
backend/app/repo/: base.py  users.py
backend/app/schemas/: users.py
backend/app/services/: users.py
backend/app/utils/: deps.py  security.py
